# mythic_operator

./: install.sh  pyproject.toml  requirements.txt
mythic_operator/: __init__.py  api.py  cli.py  config.py
mythic_operator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mythic_operator/commands/: beacons.py  chisel.py  mimikatz.py  socks.py  upload.py
